# HH_Vacancy_DB

./: .coverage  .env.example  .flake8  .gitignore  LICENSE  README.md  config.py  database.ini  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_04e2950766bc0f15___init___py.html  z_04e2950766bc0f15_api_classes_py.html  z_04e2950766bc0f15_base_api_class_py.html  z_04e2950766bc0f15_hh_api_service_py.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_api_classes_py.html  z_145eef247bfb46b6_hh_data_coordinator_py.html  z_145eef247bfb46b6_hh_db_creator_py.html  z_145eef247bfb46b6_hh_db_manager_py.html  z_145eef247bfb46b6_logging_config_py.html  z_145eef247bfb46b6_user_interaction_py.html  z_33ea1954bbe60e2e___init___py.html  z_33ea1954bbe60e2e_hh_coordinator_py.html  z_532385f02888fdd3___init___py.html  z_532385f02888fdd3_employer_py.html  z_532385f02888fdd3_vacancy_py.html  z_67d056e3707ef46d___init___py.html  z_67d056e3707ef46d_hh_db_creator_py.html  z_67d056e3707ef46d_hh_db_manager_py.html  z_67d056e3707ef46d_hh_db_service_py.html  z_b6cb97d281dd59cc___init___py.html  z_b6cb97d281dd59cc_query_type_py.html  z_d8dae034b85f0cf9___init___py.html  z_d8dae034b85f0cf9_user_interaction_py.html
src/: api_classes.py  hh_data_coordinator.py  hh_db.py  hh_db_creator.py  hh_db_manager.py  logging_config.py  user_interaction.py
src/api/: api_classes.py  base_api_class.py  hh_api_service.py
tests/: conftest.py  test_api_classes.py  test_hh_db_creator.py  test_hh_db_manager.py  test_user_interaction.py
(+7 files in other folders)
